<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drawer_activities.Meter_add"
    android:id="@+id/drawerLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/add_meter_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="125dp"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/Add_Meter_Txt"
                android:textColor="@color/TextWhiteColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_meter_costs" />

            <EditText
                android:id="@+id/add_meter_costs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:hint="@string/Contract_Costs_Txt"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/add_meter_name"
                tools:layout_editor_absoluteX="0dp" />

            <EditText
                android:id="@+id/add_meter_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/Meter_Name_Txt"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_meter_add"
                tools:layout_editor_absoluteX="29dp" />

            <EditText
                android:id="@+id/z0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:hint="@string/Starting_Value_Txt"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:singleLine="true"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_meter_add"
                tools:layout_editor_absoluteX="0dp" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_meter_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                android:title="@string/Meter"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/TextWhiteColor" />

            <EditText
                android:id="@+id/tmax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:hint="@string/Max_Cons_Txt"
                android:inputType="numberDecimal"
                android:singleLine="true"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/add_meter_costs" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/colorAccent"/>
</androidx.drawerlayout.widget.DrawerLayout>