<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/drawerLayout">



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/TextWhiteColor"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">

        <Button
            android:id="@+id/changeMyLang"
            android:layout_width="45dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:text="DE/EN"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/TextWhiteColor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="-1dp"
            android:text="@string/Meter">


        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/agesamt"
            android:layout_width="180dp"
            android:layout_height="390dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/Consumption_per_month_few_data_a"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/bgesamt"
            android:layout_width="180dp"
            android:layout_height="390dp"
            android:layout_marginTop="5dp"
            android:text="@string/Consumption_per_day_few_data_a"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/cgesamt"
            android:layout_width="322dp"
            android:layout_height="38dp"
            android:layout_marginBottom="20dp"
            android:text="@string/CO2_few_data_a"
            android:textAlignment="center"
            android:textColor="#000000"
            app:layout_constraintBottom_toTopOf="@+id/ref"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ref"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:layout_marginBottom="36dp"
            android:background="@color/colorAccent"
            android:text="@string/Update"
            android:textColor="@color/TextWhiteColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/colorAccent"/>
</androidx.drawerlayout.widget.DrawerLayout>