<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drawer_activities.Meter"
    android:id="@+id/drawerLayout"
    app:itemIconTint="@color/colorAccent"
    android:icon="@drawable/ic_readings">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/b3"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="400dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/Delete_all_Data_Btn"
            android:textColor="@color/TextWhiteColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_meter" />

        <Button
            android:id="@+id/b1"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/Update"
            android:textColor="@color/TextWhiteColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b3"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_meter" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_meter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:icon="@drawable/ic_readings"
            android:iconTint="@color/colorAccent"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:title="@string/Meter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/TextWhiteColor" />

        <TextView
            android:id="@+id/anzeige"
            android:layout_width="160dp"
            android:layout_height="400dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:hint="Zähler"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/b3"
            app:layout_constraintEnd_toStartOf="@+id/anzeige2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_meter"
            app:layout_constraintVertical_bias="0.102" />

        <TextView
            android:id="@+id/anzeige2"
            android:layout_width="160dp"
            android:layout_height="400dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="24dp"
            android:hint="Kosten Pro Kilowatt"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/b1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/anzeige"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_meter"
            app:layout_constraintVertical_bias="0.104" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/colorAccent"
        android:icon="@drawable/ic_readings" />
</androidx.drawerlayout.widget.DrawerLayout>