<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Drawer_activities.Statistics"
    android:id="@+id/drawerLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Verbrauchschnitt"
            android:layout_width="177dp"
            android:layout_height="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/Ref_Monthly_Cons"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_statistics" />

        <TextView
            android:id="@+id/verbrauchschnitt"
            android:layout_width="177dp"
            android:layout_height="26dp"
            android:text="@string/Ref_Elec"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/Verbrauchschnitt" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:text="334 kWh"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:text="4"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:text="367 kWh"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:text="3"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:text="200 kWh"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:text="134 kWh"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/verbrauchschnitt" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:text="2"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="177dp"
            android:layout_height="40dp"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:text="@string/Person_Household"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_statistics" />


        <TextView
            android:id="@+id/textView20000"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:text="350 kWh"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView2007777"
            app:layout_constraintTop_toBottomOf="@+id/verbrauchschnitt22222" />


        <TextView
            android:id="@+id/textView20001"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:layout_marginTop="20dp"
            android:text="@string/Ref_Apt_Size"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView20002"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:text="40 m²"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2007777" />


        <TextView
            android:id="@+id/textView20003"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:text="50 m²"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20002" />


        <TextView
            android:id="@+id/textView20004"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:text="60 m²"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20003" />


        <TextView
            android:id="@+id/verbrauchschnitt22222"
            android:layout_width="177dp"
            android:layout_height="26dp"
            android:text="@string/Ref_Gas"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView20001"
            app:layout_constraintTop_toBottomOf="@+id/verbrauchschnitt233333" />

        <TextView
            android:id="@+id/verbrauchschnitt233333"
            android:layout_width="177dp"
            android:layout_height="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/Ref_Monthly_Cons"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView20001"
            app:layout_constraintTop_toBottomOf="@+id/textView14" />


        <TextView
            android:id="@+id/textView2007777"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:text="30 m²"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView20001" />


        <TextView
            android:id="@+id/textView200777"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:text="450 kWh"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView20002"
            app:layout_constraintTop_toBottomOf="@+id/textView20000" />


        <TextView
            android:id="@+id/textView2007779"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:text="550 kWh"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView20003"
            app:layout_constraintTop_toBottomOf="@+id/textView200777" />


        <TextView
            android:id="@+id/textView2007778878"
            android:layout_width="177dp"
            android:layout_height="54dp"
            android:text="650 kWh"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/textView20004"
            app:layout_constraintTop_toBottomOf="@+id/textView2007779" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_statistics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/TextWhiteColor"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu"
        app:headerLayout="@layout/header"
        app:itemIconTint="@color/colorAccent"/>
</androidx.drawerlayout.widget.DrawerLayout>